--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,25 @@
-h1 {
-  color: red;
+** {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  box-sizing: border-box;
+  font-size: calc(100vw / 1920 * 10);
+  /* font-size: 10px; */
+  @media (max-width: 1024px) {
+    font-size: calc(100vw / 768 * 10);
+  }
+  @media (max-width: 767px) {
+    font-size: calc(100vw / 500 * 10);
+  }
+  @media (max-width: 500px) {
+    font-size: calc(100vw / 360 * 10);
+  }
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
 }
