--- a/src/styles.css
+++ b/src/styles.css
@@ -7,15 +7,18 @@ html {
   box-sizing: border-box;
   font-size: calc(100vw / 1920 * 10);
   /* font-size: 10px; */
-  @media (max-width: 1024px) {
+  /* @media (max-width: 1024px) {
     font-size: calc(100vw / 768 * 10);
+  } */
+  /* @media (max-width: 1024px) {
+    font-size: calc(100vw / 1024 * 10);
   }
   @media (max-width: 767px) {
     font-size: calc(100vw / 500 * 10);
   }
   @media (max-width: 500px) {
     font-size: calc(100vw / 360 * 10);
-  }
+  } */
 }
 
 body {
