--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -29,5 +29,7 @@
     color: rgba(81, 80, 118, 1);
     margin-right: 2rem;
     text-decoration: none;
+    cursor: pointer;
+    z-index: 3;
   }
 }
