--- a/src/components/main/author/styles.module.scss
+++ b/src/components/main/author/styles.module.scss
@@ -16,6 +16,7 @@
     background-repeat: no-repeat;
     width: 50%;
     background-position: -18rem 100%;
+    background-size: 96.5rem;
 }
 
   &_title {
