--- a/src/components/main/recommendations/styles.module.scss
+++ b/src/components/main/recommendations/styles.module.scss
@@ -7,6 +7,7 @@
   background-image: url('../../../assets/images/recommendations.png');
   background-repeat: no-repeat;
   background-position: 0 95rem;
+  background-size: 144rem;
 }
 
 .recommendations {
