--- a/src/components/cards/styles.module.scss
+++ b/src/components/cards/styles.module.scss
@@ -2,4 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: end;
+
+    @media(max-width: 400px) {
+        display: none;
+    }
 }
