--- a/src/components/footer/styles.module.scss
+++ b/src/components/footer/styles.module.scss
@@ -1,12 +1,15 @@
 .footer {
   width: 100vw;
   height: 100rem;
-  background:
-    // url('../../assets/images/footer_shadow.png') 0 -30rem no-repeat,
-    url('../../../src/assets/images/footer_img.png') 100% 100% no-repeat;
+  background: url('../../../src/assets/images/footer_img.png') 100% 100%
+    no-repeat;
   position: relative;
   background-size: 192rem;
   z-index: 1;
+
+  @media (max-width: 400px) {
+    height: 90rem;
+  }
 
   &::after {
     content: '';
@@ -18,6 +21,10 @@
     background-color: white;
     box-shadow: 1px 19px 12px -3px white;
     z-index: 2;
+
+    @media (max-width: 400px) {
+      height: 10rem;
+    }
   }
 
   &::before {
@@ -30,6 +37,10 @@
     background-color: white;
     box-shadow: 0px 40px 38px -1px white;
     z-index: 3;
+
+    @media (max-width: 400px) {
+      height: 10rem;
+    }
   }
 
   &_inner {
@@ -51,6 +62,12 @@
       7rem 23rem;
     padding: 2rem;
     box-sizing: border-box;
+
+    @media (max-width: 400px) {
+      width: 30rem;
+      height: 30rem;
+      left: 0;
+    }
   }
 
   &_text {
