--- a/src/components/header/styles.module.scss
+++ b/src/components/header/styles.module.scss
@@ -5,10 +5,20 @@
   height: 10rem;
   background-color: rgba(237, 236, 246, 1);
 
+  @media (max-width: 400px) {
+    width: 100vw;
+    justify-content: flex-end;
+  }
+
   &_wrap_menu {
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @media (max-width: 400px) {
+      width: 100vw;
+      justify-content: flex-end;
+    }
   }
 
   &_svg {
@@ -18,6 +28,12 @@
 
     @media (max-width: 1440px) {
       width: 4rem;
+    }
+
+    @media (max-width: 400px) {
+      width: 5.5rem;
+      margin-left: 0.5rem;
+      margin-right: 1rem;
     }
   }
 
@@ -31,5 +47,9 @@
     text-decoration: none;
     cursor: pointer;
     z-index: 3;
+
+    @media (max-width: 400px) {
+      display: none;
+    }
   }
 }
