--- a/src/components/main/author/styles.module.scss
+++ b/src/components/main/author/styles.module.scss
@@ -9,15 +9,27 @@
   background-size: 55%;
   background-position: 100% 100%;
 
+  @media (max-width: 400px) {
+    width: 95%;
+    height: 65rem;
+    background-image: none
+  }
+
   &_inner {
-    width: 40%;
     height: 100%;
     background-image: url('../../../assets/images/author_product.png');
     background-repeat: no-repeat;
     width: 50%;
     background-position: -18rem 100%;
     background-size: 96.5rem;
-}
+
+    @media (max-width: 400px) {
+      width: 100%;
+      height: 700px;
+      background-size: 60rem;
+      background-position: -13rem 100%;
+    }
+  }
 
   &_title {
     width: 60%;
@@ -29,6 +41,14 @@
     text-align: left;
     color: rgba(117, 122, 165, 1);
     margin: 0;
+
+    @media (max-width: 400px) {
+      width: 100%;
+      font-size: 2.5rem;
+      font-weight: 200;
+      line-height: 3rem;
+      margin-bottom: 1rem;
+    }
   }
 
   &_text_name {
@@ -39,6 +59,10 @@
     letter-spacing: 0em;
     text-align: left;
     color: rgba(81, 80, 118, 1);
+
+    @media (max-width: 400px) {
+      margin: 0;
+    }
   }
 
   &_text {
@@ -49,6 +73,10 @@
     letter-spacing: 0em;
     text-align: left;
     color: rgba(136, 135, 148, 1);
+
+    @media (max-width: 400px) {
+      width: 100%;
+    }
   }
 
   &_citation {
@@ -60,9 +88,15 @@
     text-align: left;
     color: rgba(136, 135, 148, 1);
 
-    &::before{
-        content: url('../../../assets/images/quotes.png');
-        margin-right: 3rem;
+    @media (max-width: 400px) {
+      font-size: 1.6rem;
+      font-weight: 600;
+      line-height: 2.5rem;
+    }
+
+    &::before {
+      content: url('../../../assets/images/quotes.png');
+      margin-right: 3rem;
     }
   }
 }
