--- a/src/components/main/cup/styles.module.scss
+++ b/src/components/main/cup/styles.module.scss
@@ -2,6 +2,10 @@
   width: 100%;
   height: 60rem;
 
+  @media(max-width: 400px) {
+    height: 100%;
+  }
+
   &_wrap {
     display: flex;
     justify-content: flex-end;
