--- a/src/components/main/discount/discount_slider/styles.module.scss
+++ b/src/components/main/discount/discount_slider/styles.module.scss
@@ -6,6 +6,11 @@
   position: relative;
   z-index: 1;
 
+  @media (max-width: 400px) {
+    margin-left: 1.5rem;
+    width: 30rem;
+  }
+
   &_lower {
     box-sizing: border-box;
     width: 60rem;
@@ -24,6 +29,11 @@
     color: rgba(255, 255, 255, 1);
     letter-spacing: 0.17em;
     padding-top: 2.5rem;
+
+    @media (max-width: 400px) {
+      width: 50rem;
+      height: 30rem;
+    }
   }
 
   &_upper {
@@ -32,6 +42,11 @@
     height: 40rem;
     background-color: rgba(247, 247, 250, 1);
     z-index: 3;
+
+    @media (max-width: 400px) {
+      width: 50rem;
+      height: 30rem;
+    }
   }
 
   &_wrapper {
@@ -41,6 +56,12 @@
     flex-direction: column;
     padding-left: 4rem;
     padding-top: 3rem;
+
+    @media (max-width: 400px) {
+      width: 75%;
+      padding-left: 2rem;
+      padding-top: 1rem;
+    }
   }
 
   &_ellipse {
@@ -58,6 +79,12 @@
     font-size: 1.8rem;
     font-weight: 400;
     line-height: 2rem;
+
+    @media (max-width: 400px) {
+      width: 4rem;
+      height: 4rem;
+      background-size: 4rem;
+    }
   }
 
   &_text {
@@ -69,6 +96,12 @@
     letter-spacing: 0em;
     color: rgba(76, 80, 114, 1);
     margin-top: 0;
+
+    @media (max-width: 400px) {
+      font-size: 1.3rem;
+      font-weight: 300;
+      line-height: 2.3rem;
+    }
   }
 
   &_desc {
@@ -79,11 +112,21 @@
     line-height: 2rem;
     letter-spacing: 0em;
     color: rgba(136, 135, 148, 1);
+
+    @media (max-width: 400px) {
+      font-size: 1rem;
+      font-weight: 500;
+      line-height: 1.5rem;
+    }
   }
 
   &_img {
     position: absolute;
     right: 0.6rem;
     width: 20rem;
+
+    @media (max-width: 400px) {
+      // width: 15rem;
+    }
   }
 }
