--- a/src/components/main/discount/styles.module.scss
+++ b/src/components/main/discount/styles.module.scss
@@ -8,10 +8,22 @@
   position: relative;
   z-index: 1;
 
+  @media(max-width: 400px) {
+    width: 95%;
+    height: 65rem;
+    display: flex;
+    flex-wrap: wrap;
+  }
+
   &_wrap {
     width: 100%;
     height: 50.7rem;
     display: flex;
+
+    @media(max-width: 400px) {
+      height: 25.7rem;
+      flex-wrap: wrap;
+    }
   }
 
   &_inner {
@@ -25,5 +37,9 @@
     left: -15rem;
     transform: rotate(15deg);
     z-index: 2;
+
+    @media(max-width: 400px) {
+      display: none;
+    }
   }
 }
