--- a/src/components/main/home/styles.module.scss
+++ b/src/components/main/home/styles.module.scss
@@ -9,6 +9,10 @@
   position: relative;
   z-index: 1;
 
+  @media (max-width: 400px) {
+    width: 95%;
+  }
+
   &_title {
     width: 100%;
     font-family: Playfair Display;
@@ -22,11 +26,19 @@
     @media (max-width: 850px) {
       line-height: 60px;
     }
+
+    @media (max-width: 400px) {
+      font-size: 5rem;
+    }
   }
 
   &_modifier_text {
     width: 100%;
     align-self: flex-end;
+
+    @media (max-width: 400px) {
+      align-self: flex-start;
+    }
   }
 
   &_subtitle {
@@ -36,6 +48,12 @@
     font-weight: 400;
     line-height: 4.2rem;
     color: rgba(99, 103, 140, 1);
+
+    @media (max-width: 400px) {
+      width: 100%;
+      font-size: 1rem;
+      line-height: 1.8rem;
+    }
   }
 
   &_text {
@@ -44,6 +62,11 @@
     font-weight: 400;
     line-height: 3.1rem;
     color: $colorGrey;
+
+    @media (max-width: 400px) {
+      font-size: 1rem;
+      line-height: 1.8rem;
+    }
   }
 
   &_wrapper {
@@ -52,19 +75,24 @@
     z-index: 3;
 
     & p:first-child {
-      margin-bottom: 30px;
+      margin-bottom: 3rem;
     }
 
     & p:nth-child(2) {
-      margin-bottom: 10px;
+      margin-bottom: 1rem;
     }
 
     & p:nth-child(3) {
-      margin-bottom: 20px;
+      margin-bottom: 2rem;
     }
 
     & button:nth-child(4) {
-      margin-bottom: 20px;
+      margin-bottom: 2rem;
+    }
+
+    @media (max-width: 400px) {
+      width: 100%;
+      margin-left: 0rem;
     }
   }
 
@@ -73,6 +101,11 @@
     font-size: 1.8rem;
     font-weight: 700;
     color: $colorEggplantGrey;
+
+    @media (max-width: 400px) {
+      font-size: 1rem;
+      line-height: 1.8rem;
+    }
   }
 
   &_button {
@@ -92,6 +125,11 @@
     align-items: end;
     justify-content: end;
     position: relative;
+
+    @media (max-width: 400px) {
+      width: 100%;
+      justify-content: flex-start;
+    }
   }
 
   &_text_desc {
@@ -103,6 +141,12 @@
     text-align: right;
     letter-spacing: 0.3em;
     margin-bottom: 10rem;
+
+    @media (max-width: 400px) {
+      font-size: 1.4rem;
+      line-height: 1.9rem;
+      text-align: left;
+    }
   }
 
   &_text_desc_last {
@@ -115,6 +159,13 @@
     color: rgba(117, 122, 165, 1);
     margin-bottom: 0;
     padding-left: 20rem;
+
+    @media (max-width: 400px) {
+      font-size: 1.4rem;
+      line-height: 1.9rem;
+      text-align: left;
+      top: -1rem;
+    }
   }
 
   &_img_branch {
@@ -134,6 +185,10 @@
     @media (max-width: 850px) {
       top: 18rem;
     }
+
+    @media (max-width: 400px) {
+      display: none;
+    }
   }
 
   &_img_dandelion {
@@ -142,5 +197,9 @@
     top: -10rem;
     right: -13rem;
     z-index: 2;
+
+    @media (max-width: 400px) {
+      display: none;
+    }
   }
 }
