--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,10 @@
 html {
   box-sizing: border-box;
   font-size: calc(100vw / 1920 * 10);
+  
+  @media (max-width: 400px) {
+    font-size: calc(100vw / 360 * 10);
+  }
   /* font-size: 10px; */
   /* @media (max-width: 1024px) {
     font-size: calc(100vw / 768 * 10);
